# aldaba-suite

./: AUTHORS  AddressResolver.cc  ArgParser.cc  ArgParser.h  ArgParserClient.cc  ArgParserClient.h  ArgParserServer.cc  ArgParserServer.h  AuthRecord.h  CHANGELOG  Crypto.h  DataLinkLayerElement.h  EthernetHeader.cc  GeneralOps.h  HTTPHeader.cc  HTTPHeader.h  ICMPv4Header.h  IPAddress.h  IPv4Header.h  IPv6Header.cc  IPv6Header.h  LICENSE.txt  Makefile.in  NetworkLayerElement.cc  PKAuthAttempt.cc  PKClient.cc  PKClient.h  PKDataLight6.cc  PKDataLight6.h  PKDataStrong4.h  PKDataStrong6.cc  PKDataStrong6.h  PacketElement.h  README.md  Random.cc  Random.h  SPAClient.cc  SPAHeader.cc  SPAHeader.h  SPAServer.cc  (+30 more)
aldaba-priv/: TemplateClientOps.txt  TemplateServerOps.txt  addServerOpsAttr.py  do_valgrind.sh
aldaba-priv/man-gen/: aldaba-man.xml  aldaba-usage.txt  aldabad-man.xml  aldabad-usage.txt  aldabad-usage.xml  replay_detection_output.txt
aldaba-priv/man-gen/xsl/: man.nroff.xsl
aldaba-suite/: AddressResolver.h  ApplicationLayerElement.h  ArgParser.cc  ArgParser.h  ArgParserClient.cc  ArgParserClient.h  ArgParserServer.cc  ArgParserServer.h  AuthRecord.cc  CHANGELOG  ClientOps.cc  ClientOps.h  Crypto.cc  EthernetHeader.h  GeneralOps.cc  GeneralOps.h  ICMPv4Header.cc  INSTALL  IPAddress.cc  IPv4Header.cc  LICENSE.txt  Makefile.in  NetworkLayerElement.h  PKAuthAttempt.h  PKDataLight4.cc  PKDataLight4.h  PKDataStrong4.cc  PKServer.cc  PKServer.h  PacketElement.cc  Random.h  RawData.cc  RawData.h  SPAClient.h  SPAHeader.cc  SPAServer.cc  SPAServer.h  Server.cc  Server.h  ServerOps.cc  (+20 more)
aldaba-suite/aldaba-priv/: TemplateGettersSetters.txt  addClientOpsAttr.py  sourceheader.template
aldaba-suite/aldaba-priv/man-gen/: aldaba-man.xml  aldaba-usage.txt  aldaba-usage.xml  aldabad-man.xml  aldabad-usage.txt  aldabadmanhtml.xml  aldabamanhtml.xml  genmanpage.sh
aldaba-suite/conf/: aldabad.conf
aldaba-suite/docs/: aldaba.8  aldaba_man.html  aldaba_man.txt  aldabad.8  aldabad_man.html  aldabad_man.txt  rfc-aldaba.txt
aldaba-suite/scripts/: aldaba_cleanup.sh  aldaba_close.sh  aldaba_forward.sh  aldaba_init.sh  aldaba_open.sh
conf/: aldaba.conf
docs/: aldaba.8  aldaba_man.html  aldaba_man.txt  aldabad.8  aldabad_man.html  aldabad_man.txt
scripts/: aldaba_cleanup.sh  aldaba_forward.sh  aldaba_init.sh
